# ryu-meetings

./: README.md  manifest.json  plugin.json
.github/workflows/: canary.yml  nightly.yml  release.yml
backend/: Cargo.toml  Cargo.toml-E
backend/src/: api.rs  audio.rs  diarize.rs  lib.rs  main.rs  notes.rs  paths.rs  store.rs  templates.rs
crates/core/stt/: Cargo.toml  README.md
crates/core/stt/src/: lib.rs  parakeet.rs
